--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "rimraf": "^5.0.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
